fix: swagger auth
