# server/docs/openapiv3.json
@@ -522,24 +522,16 @@
   },
   "components": {
     "securitySchemes": {
-      "oauth2": {
-        "type": "oauth2",
-        "flows": {
-          "implicit": {
-            "authorizationUrl": "https://<AUTHSERVERURL>/protocol/openid-connect/auth",
-            "scopes": {
-              "roles": "roles",
-              "read": "read",
-              "write": "write"
-            }
-          }
-        }
+      "bearerAuth": {
+        "type": "http",
+        "scheme": "bearer",
+        "bearerFormat": "JWT"
       }
     }
   },
   "security": [
     {
-      "oauth2": []
+      "bearerAuth": []
     }
   ]
 }
